--- a/src/main/resources/dialog/waizhai_tab_frame.fxml
+++ b/src/main/resources/dialog/waizhai_tab_frame.fxml
@@ -11,38 +11,26 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.ZonghuiController">
+<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kendy.controller.WaizhaiController">
    <children>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="785.0" prefWidth="1073.0">
          <children>
-            <Button fx:id="zonghuiRefreshBtn" layoutX="117.0" layoutY="41.0" mnemonicParsing="false" onAction="#zonghuiRefreshAction" prefHeight="34.0" prefWidth="107.0" text="即时刷新" />
-            <TableView fx:id="tableZonghui" layoutX="272.0" layoutY="114.0" prefHeight="653.0" prefWidth="448.0">
-               <columns>
-                  <TableColumn fx:id="zonghuiTabelId" prefWidth="75.0" text="局数" />
-                  <TableColumn fx:id="zonghuiFuwufei" prefWidth="103.0" text="服务费" />
-                  <TableColumn fx:id="zonghuiBaoxian" prefWidth="87.0" text="保险" />
-                  <TableColumn fx:id="zonghuiHuishui" prefWidth="74.0" text="回水" />
-                  <TableColumn fx:id="zonghuiHuiBao" prefWidth="89.0" text="回保险" />
-               </columns>
-            </TableView>
-            <TableView fx:id="tableDangtianHuizong" layoutX="770.0" layoutY="115.0" prefHeight="200.0" prefWidth="156.0">
-               <columns>
-                  <TableColumn fx:id="huizongType" prefWidth="75.0" text="当天汇总" />
-                  <TableColumn fx:id="huizongMoney" prefWidth="75.0" />
-               </columns>
-            </TableView>
-            <TableView fx:id="tableZonghuiKaixiao" layoutX="770.0" layoutY="352.0" prefHeight="348.0" prefWidth="157.0">
-               <columns>
-                  <TableColumn fx:id="zonghuiKaixiaoType" prefWidth="75.0" text="开销表" />
-                  <TableColumn fx:id="zonghuiKaixiaoMoney" prefWidth="75.0" />
-               </columns>
-            </TableView>
-            <VBox layoutX="117.0" layoutY="115.0">
-               <children>
-                  <Label alignment="CENTER" layoutX="114.0" layoutY="252.0" prefHeight="22.0" prefWidth="111.0" style="-fx-background-color: #EBEBEB; -fx-border-color: #D3D3D3;" text="局类型" />
-                  <ListView fx:id="juTypeListView" layoutX="115.0" layoutY="274.0" prefHeight="200.0" prefWidth="109.0" />
-               </children>
-            </VBox>
+            <ScrollPane prefViewportHeight="864.0" prefViewportWidth="1328.0">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="847.0" prefWidth="1799.0">
+                     <children>
+                        <TableView fx:id="tableWaizhai" layoutX="19.0" layoutY="112.0" prefHeight="206.0" prefWidth="152.0">
+                           <columns>
+                              <TableColumn fx:id="waizhaiType" prefWidth="75.0" text="债务" />
+                              <TableColumn fx:id="waizhaiMoney" prefWidth="75.0" />
+                           </columns>
+                        </TableView>
+                        <Button fx:id="waizhaiRefreshBtn" layoutX="117.0" layoutY="41.0" mnemonicParsing="false" onAction="#waizhaiRefreshAction" prefHeight="34.0" prefWidth="107.0" text="即时刷新" />
+                        <HBox fx:id="waizhaiHBox" layoutX="213.0" layoutY="109.0" prefHeight="721.0" prefWidth="1564.0" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
    </children>
